--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,9 @@
+# project
+.dockerignore
+.gitignore
+*Test.py
+orderquestion_expressions.json
+
 # Created by .ignore support plugin (hsz.mobi)
 ### Python template
 # Byte-compiled / optimized / DLL files
@@ -134,4 +140,3 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
-
